# rl-driven-film-growth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: arrhenius_parameter_sweep_and_physical_checks.ipynb  explore_env.ipynb
src/agents/: dqn_trainer.py
src/cvd_env/: arrhenius_sweep.py  reactor_env.py
src/utils/: logger.py  plots.py
tests/: test_reactor_env.py
